# rusty-anthropic

./: Cargo.toml  README.md
docs/: README.md
src/: lib.rs  request_client.rs  util.rs
src/anthropic_api/: client.rs  embeddings.rs  messages.rs  mod.rs  text_completions.rs
