[package]
name = "rusty-anthropic"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for interacting with the Anthropic API, supporting Vision and more."
license = "MIT"
authors = ["buffer"]
repository = "https://github.com/pleaseful/rusty-anthropic"
keywords = ["anthropic", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming"]
exclude = ["docs/", "rustfmt.toml"]
readme = "README.md"
documentation = "https://pleaseful.github.io/rusty-anthropic/#"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }